--- a/test/fixtures/heading_states.yml
+++ b/test/fixtures/heading_states.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+todo:
   name: TODO
   done: false
 
-two:
+done:
   name: DONE
   done: true
