Add new states to seeds and fixtures

--- a/test/fixtures/heading_states.yml
+++ b/test/fixtures/heading_states.yml
@@ -3,7 +3,13 @@
 todo:
   name: TODO
   done: false
+  color: '#e01b24'
+
+wip:
+  name: WIP
+  done: false
 
 done:
   name: DONE
   done: true
+  color: '#26a269'
