--- a/test/fixtures/headings.yml
+++ b/test/fixtures/headings.yml
@@ -35,3 +35,22 @@ four:
   depth: 2
   notebook: one
   closed_at: 2022-05-27 10:44:21
+
+src_block:
+  title: MyString
+  depth: 1
+  body: |
+    before text
+    \#+BEGIN_SRC ruby
+      puts "hello"
+    \#+END_SRC
+    after text
+  notebook: one
+
+bare_link:
+  title: MyString
+  depth: 1
+  body: |
+    some text
+    https://example.com
+  notebook: one
