--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
+  username: User1
   password_digest: <%= BCrypt::Password.create("secret") %>
 
 two:
-  username: MyString
+  username: User2
   password_digest: <%= BCrypt::Password.create("secret") %>
